--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
 		<jsf-version>2.2.20</jsf-version>
 		<javax-annotation-version>1.3.2</javax-annotation-version>
 		<primefaces-version>12.0.0</primefaces-version>
+		<primefaces-extensions-version>8.0.4</primefaces-extensions-version>
+		<log4j-version>2.19.0</log4j-version>
 
 		<!--junit-version>4.11</junit-version>
 		<hibernate-version>5.4.22.Final</hibernate-version>
